Removed all GLUT, trying to add geometry

--- a/Smooth Particles/Smooth Particles.vcxproj
+++ b/Smooth Particles/Smooth Particles.vcxproj
@@ -82,6 +82,10 @@
     <ClInclude Include="Particle.h" />
     <ClInclude Include="System.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="fragment.shader" />
+    <None Include="vertex.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
