--- a/Smooth Particles/Smooth Particles.vcxproj.filters
+++ b/Smooth Particles/Smooth Particles.vcxproj.filters
@@ -36,4 +36,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="vertex.shader">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="fragment.shader">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
