--- a/Fluids2D/Fluids2D/Fluids2D.vcxproj
+++ b/Fluids2D/Fluids2D/Fluids2D.vcxproj
@@ -79,12 +79,14 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Grid.h" />
     <ClInclude Include="particle.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Fluids2D.cpp" />
+    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="particle.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
