--- a/Fluids2D/Fluids2D/Fluids2D.vcxproj
+++ b/Fluids2D/Fluids2D/Fluids2D.vcxproj
@@ -79,14 +79,15 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Grid.h" />
+    <ClInclude Include="Cell.h" />
+    <ClInclude Include="Solver.h" />
     <ClInclude Include="particle.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Fluids2D.cpp" />
-    <ClCompile Include="Grid.cpp" />
+    <ClCompile Include="Solver.cpp" />
     <ClCompile Include="particle.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
