--- a/Fluids2D/Fluids2D/Fluids2D.vcxproj
+++ b/Fluids2D/Fluids2D/Fluids2D.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Fluids2D.cpp" />
     <ClCompile Include="Solver.cpp" />
     <ClCompile Include="particle.cpp" />
