--- a/Fluids2D/Fluids2D/Fluids2D.vcxproj.filters
+++ b/Fluids2D/Fluids2D/Fluids2D.vcxproj.filters
@@ -47,5 +47,8 @@
     <ClCompile Include="Solver.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Cell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
